# django_project

./: main.py  manage.py  pyproject.toml
db/: models.py
db/migrations/: 0001_initial.py  0002_delete_product.py  0003_initial.py  0004_rename_contentraiting_contentrating_and_more.py
