[tool.poetry]
name = "lesson-1"
version = "0.1.0"
description = ""
authors = ["Kuliev Yasinjan <yasin_ur@bk.ru>"]
readme = "README.md"
packages = [{include = "lesson_1"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
